# procx

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  procx.spec
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  release.yml
docs/: search_by_arg.tape  search_by_name.tape  search_by_path.tape  search_by_port.tape  search_everywhere.tape
scripts/: release-version.sh
src/: args.rs  config.rs  main.rs  processes.rs  tui.rs
src/processes/: utils.rs
src/tui/: rendering.rs
tests/: processes_search.rs
