[package]
name = "procx"
version = "0.1.3"
edition = "2021"
authors = ["Triet Trinh <contact@trinhminhtriet.com>"]
keywords = ["terminal", "process", "linux", "system", "kill"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
description = "ProcX is an interactive command-line tool for quickly searching and terminating processes, offering a streamlined alternative to traditional kill."
repository = "https://github.com/trinhminhtriet/procx"
homepage = "https://trinhminhtriet.com"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28"
ratatui = "0.28"
tui-textarea = "0.6"
anyhow = "1.0.91"
sysinfo = "0.32"
listeners = "0.2.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
fuzzy-matcher = "0.3.7"

[dev-dependencies]
http-test-server = "2.1.1"
